# rust_lmax_mev

./: .gitignore  CLAUDE.md  Cargo.toml  PHASE_0_6_SUPPLEMENT.md  PHASE_0_6_SUPPLEMENT_REVISION.md  PHASE_1_DETAIL_REVISION.md  PHASE_2_DETAIL_REVISION.md  PHASE_3_DETAIL_CHECKLIST.md  PHASE_4_6_PRECONDITIONS.md  PROJECT_BASE.md  deny.toml
.github/workflows/: ci.yml
config/base/: default.toml
config/dev/: default.toml
config/examples/: signing-audit-alert.yaml
config/test/: default.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/app/tests/: comparator_wiring.rs  prefetch_wiring.rs  run_double_init.rs  run_happy.rs  run_invalid_path.rs  submission_driver_e1.rs  submission_driver_e2.rs  wire_phase2.rs  wire_phase3.rs  wire_phase4.rs
crates/app/tests/common/: mod.rs
crates/bundle-relay/: Cargo.toml
crates/bundle-relay/src/: kill_switch.rs  lib.rs  rkyv_compat.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: bid_strategy.rs  lib.rs  rkyv_compat.rs
crates/execution/tests/: construct.rs  rkyv_round_trip.rs
crates/ingress/: Cargo.toml
crates/ingress/src/: lib.rs  rkyv_compat.rs
crates/ingress/tests/: journal_compat.rs  rkyv_round_trip.rs
crates/journal/: Cargo.toml
crates/journal/src/: error.rs  frame.rs  journal.rs  lib.rs  snapshot.rs
crates/node/: Cargo.toml
crates/node/src/: error.rs  lib.rs  reconnect.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/opportunity/: Cargo.toml
crates/opportunity/src/: lib.rs  rkyv_compat.rs
crates/opportunity/tests/: check_math.rs
crates/relay-clients/: Cargo.toml
crates/relay-clients/src/: bloxroute.rs  call_bundle.rs  flashbots.rs  lib.rs  send_bundle.rs
crates/relay-clients/tests/: bloxroute.rs  flashbots.rs  redaction.rs  submit_disabled.rs
crates/relay-sim/: Cargo.toml
crates/relay-sim/src/: lib.rs  rkyv_compat.rs
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs
crates/replay/tests/: g_pin.rs  g_replay.rs  g_state.rs  g_state_live.rs
crates/replay/tests/common/: mod.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs  rkyv_compat.rs
crates/risk/tests/: evaluate.rs  rkyv_round_trip.rs
crates/signer/: Cargo.toml
crates/signer/src/: bundle_tx.rs  disabled.rs  error.rs  kms_aws.rs  kms_client.rs  lib.rs  production.rs  recovery.rs  rlp.rs  signer_trait.rs
crates/simulator/: Cargo.toml
crates/simulator/examples/: dump_fixture.rs
crates/simulator/src/: cache_db_builder.rs  fixtures.rs  lib.rs  mock_router.rs  observation.rs  reconcile.rs  recording_db.rs  rkyv_compat.rs  strict_db.rs  swap_calldata.rs
crates/simulator/tests/: prefetch_cache.rs  reconcile.rs  rkyv_round_trip.rs  simulate.rs  sr_e2e.rs  t_usdc_1.rs
crates/simulator/tests/common/: mod.rs
crates/smoke-tests/: Cargo.toml
crates/smoke-tests/src/: lib.rs
crates/smoke-tests/tests/: bus_smoke.rs  journal_round_trip.rs  snapshot_smoke.rs
crates/state/: Cargo.toml
crates/state-fetcher/: Cargo.toml
crates/state-fetcher/src/: lib.rs  storage_key.rs  uniswap.rs
crates/state/src/: decode.rs  lib.rs  rkyv_compat.rs
crates/state/tests/: rkyv_round_trip.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/adr/: ADR-001-vertical-slice-replay-hooks-gate-policy.md  ADR-002-ethereum-mainnet-weth-usdc-thin-path.md  ADR-003-mempool-relay-persistence.md  ADR-004-rpc-evm-stack-selection.md  ADR-005-event-bus-implementation-policy.md  ADR-006-execution-simulation-gas-bidding-abort-policy.md  ADR-007-node-topology-fallback-rpc.md  ADR-008-observability-ci-baseline.md  TEMPLATE.md
docs/specs/: event-model.md  execution-safety.md  phase-6a-boundary.md  phase-6b-boundary.md  production-signer.md  risk-budget.md  thin-path-scope.md
docs/superpowers/plans/: 2026-04-27-task-11-types-crate-implementation.md  2026-04-29-task-12-event-bus-implementation.md  2026-05-02-phase-1-batch-a-foundation-execution.md  2026-05-02-phase-1-batch-b-app-execution.md  2026-05-02-phase-1-batch-c-tests-ci-execution.md  2026-05-02-phase-1-batch-d-final-execution.md  2026-05-02-phase-2-batch-a-node-ingress-execution.md  2026-05-02-phase-2-batch-b-state-execution.md  2026-05-02-phase-2-batch-c-replay-gates-execution.md  2026-05-02-phase-2-overview-execution.md  2026-05-02-task-13-journal-implementation.md  2026-05-04-phase-2-batch-d-app-wiring-execution.md  2026-05-04-phase-3-batch-a-spec-compliance-execution.md  2026-05-04-phase-3-batch-b-app-wiring-execution.md  2026-05-04-phase-3-batch-c-opportunity-execution.md  2026-05-04-phase-3-batch-d-risk-execution.md  2026-05-04-phase-3-batch-e-simulator-execution.md  2026-05-04-phase-3-batch-f-execution-and-final-wiring.md  2026-05-04-phase-3-overview-execution.md  2026-05-04-phase-4-batch-a-archive-node-execution.md  2026-05-04-phase-4-batch-b-state-fetcher-execution.md  2026-05-04-phase-4-batch-c-real-revm-execution.md  2026-05-04-phase-4-overview-execution.md  2026-05-09-phase-4-batch-c1-c2-split-amendment.md  2026-05-10-phase-4-batch-d-mismatch-relay-comparator-execution.md  2026-05-10-phase-4-batch-e-bundle-relay-execution.md  2026-05-10-phase-4-batch-g-final-wiring-execution.md  2026-05-10-phase-5-batch-a-prefetch-shadow-execution.md  2026-05-10-phase-5-batch-b-dynamic-bidding-execution.md  2026-05-10-phase-5-batch-c-signer-boundary-execution.md  2026-05-10-phase-5-batch-d-kill-switch-execution.md  2026-05-10-phase-5-batch-e-final-wiring-execution.md  2026-05-10-phase-5-overview-execution.md  2026-05-16-phase-6-batch-a-boundary-spec-execution.md  2026-05-16-phase-6-batch-b-signing-request-pipeline-execution.md  2026-05-16-phase-6-batch-c-relay-eth-callbundle-wiremock-execution.md  2026-05-16-phase-6-batch-d-per-adapter-kill-switch-execution.md  2026-05-16-phase-6-batch-e-production-signer-design-doc-execution.md  2026-05-16-phase-6-batch-f-phase-6a-dod-audit-tag-execution.md  2026-05-16-phase-6-overview-execution.md  (+8 more)
docs/superpowers/specs/: 2026-04-27-task-11-types-crate-design.md  (+2 more)
