[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/event-bus",
    "crates/journal",
    "crates/config",
    "crates/observability",
    "crates/app",
    "crates/smoke-tests",
    "crates/node",
    "crates/ingress",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
# serialization
rkyv = { version = "0.8", features = ["bytecheck"] }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }

# checksum
crc32fast = "1"

# async
tokio = { version = "1", features = ["full"] }

# channels
crossbeam-channel = "0.5"
parking_lot = "0.12"

# storage
rocksdb = "0.22"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# config
toml = "0.8"
config = "0.14"

# testing
proptest = "1.4"

# error
thiserror = "2"
anyhow = "1"

# EVM types
alloy-primitives = "0.8"

# Ethereum RPC + provider (Phase 2 P2-A; ADR-004). Minimal feature set:
# providers + http + ws transports + pubsub (for ws subscriptions) +
# rpc-types-eth (Block/Transaction/Log/Filter) + network (Ethereum).
alloy = { version = "0.8", default-features = false, features = [
    "std",
    "network",
    "providers",
    "provider-http",
    "provider-ws",
    "pubsub",
    "rpc-types-eth",
    "reqwest",
] }

# Async streams (Phase 2 P2-A)
futures = "0.3"
