[package]
name = "rust-lmax-mev-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "rust-lmax-mev-app"
path = "src/main.rs"

[dependencies]
rust-lmax-mev-types = { path = "../types" }
rust-lmax-mev-event-bus = { path = "../event-bus" }
rust-lmax-mev-journal = { path = "../journal" }
rust-lmax-mev-config = { path = "../config" }
rust-lmax-mev-observability = { path = "../observability" }
rust-lmax-mev-node = { path = "../node" }
rust-lmax-mev-ingress = { path = "../ingress" }
rust-lmax-mev-state = { path = "../state" }
rust-lmax-mev-opportunity = { path = "../opportunity" }
rust-lmax-mev-risk = { path = "../risk" }
rust-lmax-mev-simulator = { path = "../simulator" }
rust-lmax-mev-execution = { path = "../execution" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rkyv = { workspace = true }
alloy-primitives = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
alloy-primitives = { workspace = true }
