[package]
name = "rust-lmax-mev-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "rust-lmax-mev-app"
path = "src/main.rs"

[dependencies]
rust-lmax-mev-types = { path = "../types" }
rust-lmax-mev-event-bus = { path = "../event-bus" }
rust-lmax-mev-journal = { path = "../journal" }
rust-lmax-mev-config = { path = "../config" }
rust-lmax-mev-observability = { path = "../observability" }
rust-lmax-mev-node = { path = "../node" }
rust-lmax-mev-ingress = { path = "../ingress" }
rust-lmax-mev-state = { path = "../state" }
rust-lmax-mev-opportunity = { path = "../opportunity" }
rust-lmax-mev-risk = { path = "../risk" }
rust-lmax-mev-simulator = { path = "../simulator" }
rust-lmax-mev-execution = { path = "../execution" }
# Phase 4 P4-E: relay-sim types + bundle-relay trait + concrete adapters.
rust-lmax-mev-relay-sim = { path = "../relay-sim" }
rust-lmax-mev-bundle-relay = { path = "../bundle-relay" }
rust-lmax-mev-relay-clients = { path = "../relay-clients" }
# Phase 5 P5-A: ArchiveStateFetcher construction in wire_phase4.
rust-lmax-mev-state-fetcher = { path = "../state-fetcher" }
# Phase 6 P6-B: Signer boundary; only DisabledSigner reachable in Phase 6a.
rust-lmax-mev-signer = { path = "../signer" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rkyv = { workspace = true }
alloy-primitives = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
alloy-primitives = { workspace = true }
# P5-A: PA-4 mock StateFetcher impls the async_trait-sugared trait.
async-trait = { workspace = true }
# P6B-E1 D-T-E1-6 + D-T-E1-7: wiremock for the 127.0.0.1-bound local
# relay test harness. Pre-existing workspace dev-dep in
# relay-clients; pulled in here for the submission_driver integration tests.
wiremock = { workspace = true }
serde_json = { workspace = true }
