[package]
name = "rust-lmax-mev-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 1 typed TOML configuration loader for the LMAX-style MEV engine"

[dependencies]
config = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
rkyv = { workspace = true }

[dev-dependencies]
tempfile = "3"
