[package]
name = "rust-lmax-mev-event-bus"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 1 single-consumer bounded event bus for the LMAX-style MEV engine"

[dependencies]
rust-lmax-mev-types = { path = "../types" }
crossbeam-channel = { workspace = true }
metrics = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
