[package]
name = "rust-lmax-mev-ingress"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 2 ingress — MempoolSource trait + Geth WS impl + raw-tx Normalizer (ADR-003)"

[dependencies]
rust-lmax-mev-types = { path = "../types" }
rust-lmax-mev-node = { path = "../node" }
rust-lmax-mev-config = { path = "../config" }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rkyv = { workspace = true }
lru = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
