[package]
name = "rust-lmax-mev-journal"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 1 append-only journal + RocksDB snapshot for the LMAX-style MEV engine"

[dependencies]
rust-lmax-mev-types = { path = "../types" }
rkyv = { workspace = true }
bincode = { workspace = true }
rocksdb = { workspace = true }
metrics = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
tempfile = "3"
