[package]
name = "rust-lmax-mev-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 2 NodeProvider — Geth WS subscriptions + HTTP req/resp + fallback failover (ADR-007)"

[dependencies]
rust-lmax-mev-config = { path = "../config" }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
