[package]
name = "rust-lmax-mev-observability"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 1 tracing-subscriber + Prometheus metrics initializer for the LMAX-style MEV engine"

[dependencies]
rust-lmax-mev-config = { path = "../config" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
thiserror = { workspace = true }
