[package]
name = "rust-lmax-mev-opportunity"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 3 P3-C arbitrage opportunity engine — pure-function UniV2 vs UniV3 0.05% WETH/USDC delta detection, emits OpportunityEvent"

[dependencies]
rust-lmax-mev-types = { path = "../types" }
rust-lmax-mev-state = { path = "../state" }
rust-lmax-mev-config = { path = "../config" }
alloy-primitives = { workspace = true, features = ["serde"] }
serde = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
