[package]
name = "rust-lmax-mev-relay-clients"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 4 P4-E Flashbots + bloXroute HTTP relay-sim adapters (read-only eth_callBundle). Every BundleRelay::submit_bundle returns Err(SubmitDisabled). No funded key, no signing."

[dependencies]
rust-lmax-mev-relay-sim = { path = "../relay-sim" }
rust-lmax-mev-bundle-relay = { path = "../bundle-relay" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }
