[package]
name = "rust-lmax-mev-relay-sim"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 4 P4-D relay sim comparator + types. ADR-006 §\"Abort policy\" zero-tolerance comparator. NO eth_callBundle HTTP client (lands P4-E); NO submit; NO production key material."

[dependencies]
rust-lmax-mev-types = { path = "../types" }
rust-lmax-mev-simulator = { path = "../simulator" }
alloy-primitives = { workspace = true, features = ["serde"] }
serde = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
