[package]
name = "rust-lmax-mev-replay"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 2 P2-C replay + EXIT gates — StateReplayer + RecordedEthCaller + Replay/State/Pin gate tests"

[dependencies]
rust-lmax-mev-state = { path = "../state" }
rust-lmax-mev-node = { path = "../node" }
rust-lmax-mev-journal = { path = "../journal" }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
