[package]
name = "rust-lmax-mev-risk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 3 P3-D risk gate — pure-function sizing + budget evaluation per docs/specs/risk-budget.md, consumes OpportunityEvent and emits RiskCheckedOpportunity / OpportunityAborted"

[dependencies]
rust-lmax-mev-types = { path = "../types" }
rust-lmax-mev-state = { path = "../state" }
rust-lmax-mev-opportunity = { path = "../opportunity" }
alloy-primitives = { workspace = true, features = ["serde"] }
serde = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
