[package]
name = "rust-lmax-mev-signer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 5 fail-closed signer boundary stub. Production signing requires Phase 6b Production Gate."

[dependencies]
alloy-primitives = { workspace = true }
async-trait      = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true }
tracing-subscriber = { workspace = true }
