[package]
name = "rust-lmax-mev-simulator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 3 P3-E LOCAL revm pre-sim shim — DP-S1 deterministic pipeline proof per user-approved ADR-006 deferral; ProfitSource::HeuristicPassthrough until P4 swaps in real Uniswap bytecode + state"

[dependencies]
rust-lmax-mev-types = { path = "../types" }
rust-lmax-mev-state = { path = "../state" }
rust-lmax-mev-state-fetcher = { path = "../state-fetcher" }
rust-lmax-mev-opportunity = { path = "../opportunity" }
rust-lmax-mev-risk = { path = "../risk" }
alloy-primitives = { workspace = true, features = ["serde"] }
serde = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
revm = { workspace = true }
# Phase 5 P5-A: interior-mutability for the active fixture slot +
# bounded LRU cache for per-block fixture retention. Both are
# already workspace deps; promoted to direct here.
parking_lot = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
tempfile = "3"
# P4-C2 dump_fixture example deps. Operator-only; never invoked by `cargo test`.
rust-lmax-mev-config = { path = "../config" }
rust-lmax-mev-node = { path = "../node" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# P5-A: PA-2/3/5 mock StateFetcher uses #[async_trait] (the trait
# declaration is async_trait-sugared in crates/state-fetcher).
async-trait = { workspace = true }

# P4-C2 fixture-recording tool. Operator-only:
#   cargo run --release --example dump_fixture -- 0x<block_hash>
# Reads ARCHIVE_RPC_URL env var; never logged. CI does not invoke
# `cargo run --example`. Not a test.
[[example]]
name = "dump_fixture"
path = "examples/dump_fixture.rs"
