[package]
name = "rust-lmax-mev-state"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Phase 2 P2-B state engine — UniV2 + UniV3 0.05% WETH/USDC pool reserves snapshot via NodeProvider eth_call_at_block + RocksDbSnapshot"

[dependencies]
rust-lmax-mev-types = { path = "../types" }
rust-lmax-mev-node = { path = "../node" }
rust-lmax-mev-journal = { path = "../journal" }
rust-lmax-mev-config = { path = "../config" }
alloy = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rkyv = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
parking_lot = { workspace = true }
